--- a/views/perfil.html
+++ b/views/perfil.html
@@ -1,3 +1,77 @@
+<nav class="navbar navbar-default margin">
+  <div class="container-fluid">
+<!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand logo1" href="#"><img class="logo"  src="../assets/images/logo-01.png" alt="logo"></a>
+    </div>
+
+<!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a></li>
+        <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li><a href="#"><i class="fa fa-stethoscope" aria-hidden="true"></i></a></li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Buscar">
+        </div>
+        <button type="submit" class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
+      </form>
+      <ul class="color nav navbar-nav navbar-right">
+        <li><a href=""><p class="color">Cerrar sesión</p></a></li> <!-- AQUI HAY UN CAMBIO EN LA CLASE -->
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<!--seccion 2-->
+<div class="container-fluid">
+  <div class="row">
+    <div class=" col-md-3 green">
+      <button type="submit" class="btn btn-default button1 btn-w"><i class="fa fa-camera-retro" aria-hidden="true"><p>Crear albúm</p> </i></button>
+    </div>
+        <div class="col-md-6 pink">
+          <div class="row">
+            <div class=" col-xs-3 msj">
+              <textarea id="post" name="name" rows="8" cols="45"placeholder="¿Qué estas pensando?"></textarea>
+              <div class="col-xs-3">
+                <input class="disabled button1" id="postear" type="submit" name="" value="publicar">
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class=" col-md-3 green">
+        AMIGOS
+      </div>
+
+    </div>
+
+
+  </div>
+
+</div>
+
+
+
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script type="text/javascript"src="../js/app.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
