--- a/views/pagina-principal.html
+++ b/views/pagina-principal.html
@@ -50,27 +50,51 @@
           <button type="submit" class="btn btn-default button1 btn-w"><i class="fa fa-venus" aria-hidden="true"><p>Asesoras de Lactancia</p>  </i></button>
         </div>
 
-            <div class="col-md-9 pink">
+            <div class="col-md-6 pink">
               <div class="row">
-                <div class=" col-xs-3 msj">
+                <div class=" col-xs-12 msj">
                   <textarea id="post" name="name" rows="8" cols="45"placeholder="¿Qué estas pensando?"></textarea>
-                  <div class="col-xs-3">
-                    <input class="disabled button1" id="postear" type="submit" name="" value="publicar">
+                  <div class="col-xs-12">
+                    <button type="button" class="button1"  id="postear"class="btn btn-default btn-lg btn-block">Publicar</button>
                   </div>
                 </div>
               </div>
             <div class="row">
-               <div class="col-sm-8 col-md-6">
+               <div class="col-xs-12 col-md-6">
                  <div class="thumbnail">
-                   <img src="..." alt="...">
+                   <img src="../assets/images/Working-Mom.jpg" alt="...">
                    <div class="caption">
-                     <h3>Thumbnail label</h3>
-                     <p>...</p>
-                     <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                     <h3>Mamás que trabajan</h3>
+                     <p><hr></p>
+                     <p><a href="#" class="button2 btn btn-primary" role="button">Seguir leyendo</a>
+                   </div>
+                 </div>
+               </div>
+               <div class="col-xs-12 col-md-6">
+                 <div class="thumbnail">
+                   <img src="../assets\images\reciennacidoc_0.jpg" alt="...">
+                   <div class="caption">
+                     <h3>Cuidados del recién nacido</h3>
+                     <p><hr></p>
+                     <p><a href="#" class="button2 btn btn-primary" role="button">Seguir leyendo</a>
                    </div>
                  </div>
                </div>
               </div>
+          </div>
+          <div class=" col-md-3 green">
+            <div class="col-xs-12 col-md-12">
+              <div class="thumbnail">
+                <h2>Rosy Fernández</h2>
+                <h3>Asesora de Lactancia</h3>
+                <h4>Público Nuevo curso</h4>
+                <div class="caption">
+                  <p><hr></p>
+                  <p><a href="#" class="button2 btn btn-primary" role="button">Me interesa</a>
+                </div>
+              </div>
+            </div>
+
           </div>
 
         </div>
